<resources>
    <string name="hint_search">Smart Search Everything</string>
    <string name="search_history">Search History</string>
    <string name="recent_apps">Recent apps</string>
    <string name="local_apps">Local apps</string>
    <string name="weather_setting">Weather Setting</string>
    <string name="weather_location">Weather Location</string>
    <string name="temperature_unit">Temperature unit</string>
    <string name="reset_city_in_english">Reset city in English</string>
    <string name="auto_location">Auto-location</string>
    <string name="weather_location_network_error">Unable to locate city due to network error</string>
    <string name="themes">Themes</string>
    <string name="set">Set</string>
    <string name="theme_not_applied">Theme Not Applied</string>
    <string name="theme_not_applied_tip">You haven\'t finished setting the new theme. Tap \'Set\' to apply it now.</string>
    <string name="cancel">Cancel</string>
    <string name="text_continue">Continue</string>
    <string name="splash_start_tip">By tapping this button, you agree to our</string>
    <string name="privacy_policy">Privacy Policy</string>
    <string name="terms_of_service">Terms of Service</string>
    <string name="loading">Loading...</string>
    <string name="download">Download</string>
    <string name="my_themes">My Themes</string>
    <string name="all_apps">All Apps</string>
    <string name="store">Store</string>
    <string name="games">Games</string>
    <string name="utilities">Utilities</string>
    <string name="art_design">Art &amp; Design</string>
    <string name="health">Health</string>
    <string name="social">Social</string>
    <string name="shopping">Shopping</string>
    <string name="music_video">Music &amp; Video</string>
    <string name="featured">Featured</string>
    <string name="set_default_home_app">Please set "%s" as default home app to take effect</string>
    <string name="home_launcher_permission_tip">Find %s and click it to grant permission</string>
    <string name="not_now">not now</string>
    <string name="apply_theme">Apply Theme</string>
    <string name="apply">Apply</string>
    <string name="ad_no_fill_tip">The ad has not been filled yet! Try again later</string>
    <string name="guide_1_text">Tap the Theme Icon for more themes</string>
    <string name="guide_2_text">Swiping right or pressing the back key to exit preview mode</string>
    <string name="tutorial">Tutorial</string>
    <string name="vivo_setting_part_1">&#160;&#160;&#160;&#160;&#160;Open the system settings and select Security and Privacy.</string>
    <string name="vivo_setting_part_2">&#160;&#160;&#160;&#160;&#160;Click "more security settings"</string>
    <string name="vivo_setting_part_3">&#160;&#160;&#160;&#160;&#160;Click "Replace the system launcher"</string>
    <string name="vivo_setting_part_4">&#160;&#160;&#160;&#160;&#160;Open "Allow the launcher to be replaced" and keep "Tap the home button to lock the system home screen" closed.</string>
    <string name="vivo_setting_part_5">&#160;&#160;&#160;&#160;&#160;Find Lambda Launcher and click it to grant permission.</string>
    <string name="vip_no_ad">No Ads</string>
    <string name="vip_unlock_all">Unlock ALL Exclusive Themes</string>
    <string name="vip_weekly_update">Weekly Update</string>
    <string name="vip_customer">VIP Customer Support</string>
    <string name="secure_by_google_pay">Secure by Google Pay</string>
    <string name="all_content_no_ads">All content NO ADS.</string>
    <string name="get">Get</string>
    <string name="permission_refuse_tip">Please go to the settings page to grant required permissions</string>
    <string name="goto_set">Go &amp; Set</string>
    <string name="default_home_app_callback">⏰ Finish setting up for your new home screen! Tap here!</string>
    <string name="oops">Oops...</string>
    <string name="set_default_failed_tip">Permission is not granted. \nWould you please tell us the reason?</string>
    <string name="try_again">Try Again</string>
    <string name="do_not_know_how_to_set">Don\'t know how to set</string>
    <string name="maybe_late">maybe later</string>
    <string name="feedback_sent">Feedback Sent</string>
    <string name="rate_us">Rate Us</string>
    <string name="rate_us_tip">Thank you for your likes, we will continue to work hard!</string>
    <string name="submit">Submit</string>
    <string name="net_error_tip">Network disconnected.Please retry</string>
    <string name="connect_now">Connect Now</string>
    <string name="retry">Retry</string>
    <string name="no_data">No Data</string>
    <string name="set_home_screen">Set HomeScreen</string>
    <string name="set_icons">Set Icons</string>
    <string name="select_all">Select All</string>
    <string name="deselect_all">Deselect All</string>
    <string name="fail_icon_hint">Fail to create icon. Please check your system configuration…</string>
    <string name="install">Install</string>
    <string name="app_no_install">You must select a related app before installing the icon</string>
    <string name="get_all_in_theme">Get all in theme</string>
    <string name="select_apps_to_icons">Select apps to icons</string>
    <string name="join_premium_plan">Join Premium Plan</string>
    <string name="watch_ad_to_unlock_all">Watch (%s/3) Ads to Unlock ALL</string>
    <string name="how_to_set_widget">How to set widget?</string>
    <string name="how_to_set_widget_tip1">Long press the home screen and click on the "widgets".</string>
    <string name="how_to_set_widget_tip2">Scroll down to find the widget bar, hold and drag it to the home screen.</string>
    <string name="next">Next</string>
    <string name="monday">Mon</string>
    <string name="tuesday">Tue</string>
    <string name="wednesday">Wed</string>
    <string name="thursday">Thur</string>
    <string name="friday">Fri</string>
    <string name="saturday">Sat</string>
    <string name="sunday">Sun</string>
    <string name="january">Jan.</string>
    <string name="february">Feb.</string>
    <string name="march">Mar.</string>
    <string name="april">Apr.</string>
    <string name="may">May.</string>
    <string name="june">Jun.</string>
    <string name="july">Jul.</string>
    <string name="august">Aug.</string>
    <string name="september">Sep.</string>
    <string name="october">Oct.</string>
    <string name="november">Nov.</string>
    <string name="december">Dec.</string>
    <string name="xpanel">X Plane</string>
    <string name="clock">Clock</string>
    <string name="calendar">Calendar</string>
    <string name="weather">Weather</string>
    <string name="enter_city">Enter City</string>
    <string name="my_city">My City</string>
    <string name="temp_unit">℃</string>
    <string name="temp_unit_f">℉</string>
    <string name="access_notification">Allow Live Weather Notification</string>
    <string name="access_notification_des">Grants Notification Permission to receive important weather information.</string>
    <string name="enable">Enable</string>
    <string name="access_notification_des2">You can close anytime</string>
    <string name="view_details">View Details</string>
    <string name="lowest_temperature">lowest temperature</string>
    <string name="day_of_rain">Day of rain</string>
    <string name="days">%s days</string>
    <string name="daily_forecast">Daily forecast</string>
    <string name="home_screen_widget">Home screen widget</string>
    <string name="add">Add</string>
    <string name="live_weather_des">Live Weather(4x%s)</string>
    <string name="appwidget_text">EXAMPLE</string>
    <string name="add_widget">Add widget</string>
    <string name="app_widget_description">This is an app widget description</string>
    <string name="rainfall_prediction">Rainfall Prediction</string>
    <string name="wind_text">Wind</string>
    <string name="humidity">Humidity</string>
    <string name="visibility">Visibility</string>
    <string name="uv_index">UV Index</string>
    <string name="pressure">Pressure</string>
    <string name="precipitation">Precipitation</string>
    <string name="m_unit">%s m</string>
    <string name="today_text">Today %s</string>
    <string name="tomorrow_text">Tomorrow %s</string>
    <string name="hourly_forecast">Hourly forecast</string>
    <string name="wind_speed">Wind speed</string>
    <string name="feels_like">Feels like</string>
    <string name="search">Search</string>
    <string name="find_location">enter the name of city</string>
    <string name="district_of">District of %s</string>
    <string name="manage_cities">Manage cities</string>
    <string name="location">Location</string>
    <string name="location_hint">Locating ...</string>
    <string name="recommend_city">Well-known City</string>
    <string name="popular_cities_worldwide">Popular Cities Worldwide</string>
    <string name="earthquake_map">Earthquake Map</string>
    <string name="radar_map">Radar Map</string>
    <string name="location_dialog_des">Unable to recognize city when location service are off.</string>
    <string name="search_manually">Search manually</string>
    <string name="enable_location_services">Enable location services</string>
    <string name="get_radar">Get Radar map \ninfo for free</string>
    <string name="earthquake_details">View Earthquake Details</string>
    <string name="quit_live_weather">Quit Live Weather?</string>
    <string name="quit">Quit</string>
    <string name="air_push_title">View today\'s Air Quality Index in %s</string>
    <string name="push_air_des">Click for details</string>
    <string name="check">Check</string>
    <string name="sunrise_sunset">Sunrise &amp; Sunset</string>
    <string name="sunshine_duration">Sunshine duration</string>
    <string name="sunrise">Sunrise</string>
    <string name="sunset">Sunset</string>
    <string name="air_quality">Air quality</string>
    <string name="air_quality_des">Air quality is satisfactory with little or no risks to health.</string>
    <string name="air_quality_1">Good</string>
    <string name="air_quality_2">Fair</string>
    <string name="air_quality_3">Moderate</string>
    <string name="air_quality_4">Poor</string>
    <string name="air_quality_5">Very Poor</string>
    <string name="aqi">AQI</string>
    <string name="pm25">PM2.5</string>
    <string name="pm10">PM10</string>
    <string name="o3">O3</string>
    <string name="local_news">Local News</string>
    <string name="read_more">Read More</string>
    <string name="read_more_2">Read More >></string>
    <string name="refresh_hint">Data is up to date</string>
    <string name="depth">Depth:</string>
    <string name="location_text">Location:</string>
    <string name="rainfall_prediction_text">Rainfall\nPrediction</string>
    <string name="tomorrow">Tomorrow</string>
    <string name="today">Today</string>
    <string name="recall_des_rain_1">Chance of rain tomorrow. Don\'t forget your umbrella!</string>
    <string name="recall_des_rain_2">Possible showers tomorrow. Stay prepared for wet weather.</string>
    <string name="recall_des_rain_3">Rain likely tomorrow. Grab your raincoat before heading out.</string>
    <string name="recall_des_rain_4">Rain possible tomorrow. Stay dry with our weather updates.</string>
    <string name="recall_des_sunny_1">Possible sunny weather tomorrow. Enjoy the clear skies!</string>
    <string name="recall_des_sunny_2">Sunshine expected tomorrow. Get ready to soak up the rays!</string>
    <string name="recall_des_sunny_3">Tomorrow may bring clear skies. Embrace the sunny forecast!</string>
    <string name="recall_des_sunny_4">Stay optimistic for a sunny day tomorrow. Prepare for beautiful weather!</string>
    <string name="recall_des_lower_1">Temperature drop tomorrow. Dress warmly for cooler weather.</string>
    <string name="recall_des_lower_2">Possible cooling tomorrow. Prepare for a chillier day ahead.</string>
</resources>