<?xml version="1.0" encoding="utf-8"?><!-- Copyright (C) 2009 The Android Open Source Project

     Licensed under the Apache License, Version 2.0 (the "License");
     you may not use this file except in compliance with the License.
     You may obtain a copy of the License at

          http://www.apache.org/licenses/LICENSE-2.0

     Unless required by applicable law or agreed to in writing, software
     distributed under the License is distributed on an "AS IS" BASIS,
     WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
     See the License for the specific language governing permissions and
     limitations under the License.
-->

<favorites xmlns:launcher="http://schemas.android.com/apk/res-auto/com.android.launcher3">

    <!-- Hotseat -->
    <include launcher:workspace="@xml/dw_phone_hotseat" />

    <!-- Bottom row -->
    <folder
        launcher:screen="0"
        launcher:title="@string/music_video"
        launcher:x="0"
        launcher:y="-3"></folder>
    <resolve
        launcher:screen="0"
        launcher:x="1"
        launcher:y="-3">
        <favorite launcher:uri="#Intent;action=FEATURED;end" />
    </resolve>

    <resolve
        launcher:screen="0"
        launcher:x="0"
        launcher:y="-2">
        <favorite
            launcher:className="com.android.launcher3.Launcher"
            launcher:packageName="com.theme.lambda.launcher" />
    </resolve>
    <folder
        launcher:screen="0"
        launcher:title="@string/store"
        launcher:x="1"
        launcher:y="-2"></folder>
    <folder
        launcher:screen="0"
        launcher:title="@string/games"
        launcher:x="2"
        launcher:y="-2"></folder>
    <folder
        launcher:screen="0"
        launcher:title="@string/utilities"
        launcher:x="3"
        launcher:y="-2"></folder>

    <folder
        launcher:screen="0"
        launcher:title="@string/art_design"
        launcher:x="0"
        launcher:y="-1"></folder>
    <folder
        launcher:screen="0"
        launcher:title="@string/health"
        launcher:x="1"
        launcher:y="-1"></folder>
    <folder
        launcher:screen="0"
        launcher:title="@string/social"
        launcher:x="2"
        launcher:y="-1"></folder>
    <folder
        launcher:screen="0"
        launcher:title="@string/shopping"
        launcher:x="3"
        launcher:y="-1"></folder>

</favorites>
